
 OpenSSL CHANGES
 _______________

 Changes between 0.9.8g and 0.9.9  [xx XXX xxxx]

  *) Expand ENGINE to support engine supplied SSL client certificate functions.
     [Steve Henson]

  *) Revamp of LHASH to provide stronger type-checking. Still to come:
     STACK, TXT_DB, bsearch, qsort.
     [Ben Laurie]

  *) Not all of this is true any longer.
     Will have to be updated to reflect all subsequent changes to cryptlib.c.
                                                                       --bodo


     To support arbitrarily-typed thread IDs, deprecate the existing
     type-specific APIs for a general purpose CRYPTO_THREADID
     interface. Applications can choose the thread ID
     callback type it wishes to register, as before;

        void CRYPTO_set_id_callback(unsigned long (*func)(void));
        void CRYPTO_set_idptr_callback(void *(*func)(void));

     but retrieval, copies, and comparisons of thread IDs are via
     type-independent interfaces;

        void CRYPTO_THREADID_set(CRYPTO_THREADID *id);
        void CRYPTO_THREADID_cmp(const CRYPTO_THREADID *id1,
                                 const CRYPTO_THREADID *id2);
        void CRYPTO_THREADID_cpy(CRYPTO_THREADID *dst,
                                 const CRYPTO_THREADID *src);

     Also, for code that needs a thread ID "value" for use in
     hash-tables or logging, a "hash" is available by;

        unsigned long CRYPTO_THREADID_hash(const CRYPTO_THREADID *id);

     This hash value is likely to be the thread ID anyway, but
     otherwise it will be unique if possible or as collision-free as
     possible if uniqueness can't be guaranteed on the target
     architecture.

     The following functions are deprecated;
        unsigned long (*CRYPTO_get_id_callback(void))(void);
        unsigned long CRYPTO_thread_id(void);

     As a consequence of the above, there are similar deprecations of
     BN_BLINDING functions in favour of CRYPTO_THREADID-based
     alternatives;
